--- a/d00/ex02/doft.html
+++ b/d00/ex02/doft.html
@@ -26,13 +26,15 @@
 		</div>
 		<div class="center">
 			<img class="cluster" src="resources/cluster.jpg" title="cluster" alt="cluster">
-				<map name="clustermap">
-					<area shape="rect" coords="1,1,560,660" href="http://www.ikea.com" title="Ikea" alt="Ikea">
-					<area shape="rect" coords="930,360,1180,580" href="http://www.apple.com" title="Mac" alt="Mac">
-				</map>
+			<a href="http://www.ikea.com">
+				<div class="chair" title="chair" alt="chair"></div>
+			</a>
+			<a href="http://www.apple.com">
+				<div class="mac" title="mac" alt="mac"></div>
+			</a>
 		</div>
 		<div class="blockright">
-			<img class="lefttop" src="resources/book.png" title="arrow" alt="arrow">
+			<img class="lefttop" src="resources/book.png" title="book" alt="book">
 			<img class="towel" src="resources/towel.png" title="towel" alt="towel">
 			<div class="wall" title="wall" alt="wall">
 		</div>
