--- a/d00/ex03/responsive.html
+++ b/d00/ex03/responsive.html
@@ -1,66 +1,8 @@
 <html>
 <head>
-	<title>Periodic table</title>
-	<style>
-		body { background-color: white; }
-		table { width: 100%; height: 50%}
-		tr {width: 80%}
-		td { 
-			border: thin solid transparent;
-      width: 5%;
-			height: 5vw;
-			overflow: hidden;
-		}
-		.border {}
-		.element {
-			font-weight: bold;
-			text-align: center;
-		}
-		.num {
-			text-align: left;
-      font-size: small;
-		}
-		.molar {
-			text-align: right;
-			font-size: small;
-		}
-		.empty {
-			text-align: left;
-		}
-		.cell {
-		}
-		.g_hydrogen { background-color: #2CDFFF; }
-		.g_halogen { background-color: #B2ADFF }
-		.g_noble { background-color: #D87BFF }
-		.g_alkali_s { background-color: #FF5151 }
-		.g_alkaline_s { background-color: #FFA733 }
-		.g_boron_p { background-color: #53FF37 }
-		.g_boron_m { background-color: #25FFCD }
-		.g_carbon_p { background-color: #53FF37 }
-		.g_carbon_nm { background-color: #2CDFFF }
-		.g_carbon_m { background-color: #25FFCD }
-		.g_pgen_p { background-color: #53FF37 }
-		.g_pgen_nm { background-color: #2CDFFF }
-		.g_pgen_m { background-color: #25FFCD }
-		.g_chal_p { background-color: #53FF37 }
-		.g_chal_nm { background-color: #2CDFFF }
-		.g_chal_m { background-color: #25FFCD }
-		.g_trans { background-color: #FFEC24 }
-		.g_lanth_f { background-color: #B5EF29 }
-		.g_lanth_d { background-color: #B5EF29 }
-		.g_acti_f { background-color: #EF4ACD }
-		.g_acti_d { background-color: #E506C9 }
-		.mendel {width: 30%; height: 25vw;}
-		.link { color: #CD00CD; }
-		footer { 
-      bottom: 20; 
-      text-align: right; 
-      position: fixed; 
-      width:99%; 
-      font-style: italic; 
-      font-family: monospace
-    }
-	</style>
+	<meta charset="UTF-8">
+  <link rel="stylesheet" href="responsive.css">
+  <title>Periodic table</title>
 </head>
 <body >
 	<div style="margin-right:30%; text-align: center;">
